# PTBR-OpenIE

./: .flake8  .gitignore  Pipfile  README.md  main.ipynb  main.py  pyproject.toml  requirements.txt
models/: README.md
predicate_extraction/: __init__.py  constants.py  data_formatter.py  main.py  model.py  types.py
src/: constants.py  data_formatter.py  model.py
src/argument_prediction/: __init__.py  constants.py  data_formatter.py  model.py  types.py
src/predicate_extraction/: __init__.py  constants.py  data_formatter.py  model.py  types.py
triple_extractor_ptbr_pligabue/: bert.py  constants.py  data_formatter.py  model.py
triple_extractor_ptbr_pligabue/argument_prediction/: constants.py  data_formatter.py  model.py  types.py
triple_extractor_ptbr_pligabue/predicate_extraction/: constants.py  data_formatter.py  model.py
