[tool.poetry]
name = "triple-extractor-ptbr-pligabue"
version = "0.1.0"
description = ""
authors = ["Pedro Ligabue <pedroligabue@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "triple_extractor_ptbr_pligabue"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
transformers = "^4.33.1"
tensorflow = "2.10"
tensorflow-io-gcs-filesystem = "0.27.0"
nltk = "3.8.1"
pandas = "^2.1.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
jupyterlab = "^4.0.5"
ipywidgets = "^8.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
